# stora

./: .gitignore  README.md  plugin.py.jinja2  pyproject.toml  setup.cfg  tasks.py
.github/workflows/: release.yaml
app/: db.py  main.py  settings.py  utils.py
app/widgets/: add_document_item.py  collection_table.py  collections_tree.py  database_view.py  document_value_input.py  main_window.py
app/widgets/dialogs/: add_document.py  confirm_alter_document.py  connect_to_db.py  document_value.py  error.py  show_document_value.py  update_value.py
assets/: styles.qss
ui/: add_document_item.ui  collection_table.ui  collections_tree.ui  database_view.ui  dialog_add_document.ui  dialog_confirm_alter_document.ui  dialog_connect_to_db.ui  dialog_show_document_value.ui  dialog_update_value.ui  document_value_input.ui  main_window.ui
